--- a/src/style.css
+++ b/src/style.css
@@ -1,28 +1,19 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1em; 
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  padding: 8px 15px;
 }
 
 button:hover {
@@ -34,26 +25,86 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
-}
-
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
-
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.input-container {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.input-large {
+  flex-grow: 1;
+  padding: 8px;
+  font-size: 13px;
+}
+
+.alfabetos-seleccion {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.alfabeto-item {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.alfabeto-item:hover {
+  background-color: black;
+}
+
+.alfabeto-seleccionado {
+  background-color: black;
+  border-color: blue;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+.input-container {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.cadenas-seleccion {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.cadena-item {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.cadena-item:hover {
+  background-color: black;
+}
+
+.cadena-seleccionada {
+  background-color: black;
+  border-color: blue;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
 }
