--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 #app {
-  background: var(--background-color);
+  background: transparent;
   padding: 35px;
   border-radius: 5px;
   box-shadow: 0px 5px 15px var(--shadow-color);
@@ -45,6 +45,7 @@ body {
   align-items: center;
   overflow-y: auto;
   transition: background 0.3s, box-shadow 0.3s;
+  z-index: 1; 
 }
 
 button {
